<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pix_driver</name>
  <version>1.0.0</version>
  <description>PIXLOOP CHASSIS DRIVER FOR ROS2</description>
  <maintainer email="mark@pixmoving.net">Mark Jin</maintainer>
  <license>Apache 2.0 License</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_auto_cmake</buildtool_depend>

  <build_depend>buildtin_interfaces</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>time_utils</depend>
  <depend>pix_driver_msg</depend>
  <depend>can_msgs</depend>
  <depend>autoware_auto_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>buildtin_interfaces</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
